--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE HTML>
 <html>
-<head>
-<title>Sul's Poems</title<=>
-</head>
-<body>
-<h1>Welcome to Sulani's Poems.</h1>
-<br>Here you will find poems that belong to Sulani Fernando.</br>
-</body>
+ <head>
+  <title>Sul's Poems</title>
+  <meta charset="utf-8">
+ </head>
+ <body>
+  <h1>Welcome to Sulani's Poems.</h1>
+  <br>Here you will find poems that belong to Sulani Fernando.</br>
+ </body>
 </html>
