Updated webpage to new style.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <title>Sulani's Poems</title>
 </head>
 <body>
-<h1>Welcome to Sulani's Webpage.  *** Under Construction ***</h1>
-<br>Below you will find my poems.</br>
+<script src="dascript.js"></script>
+<link rel="stylesheet" href="style.css"/>
+<h1>Welcome to Sulani's Webpage.</h1>
+<h2>Below you will find my poems.</h2>
 <img src="1.jpg"></img>
 <img src="2.jpg"></img>
 <img src="3.jpg"></img>
 <img src="4.jpg"></img>
 <img src="5.jpg"></img>
 <img src="6.jpg"></img>
+<b id="me">Designed by Seth.</b>
+<b id="ammi">Poems written by Sulani.</b>
 </body>
 </html>
